# pykwant

./: .coverage  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
notebooks/: 01 dates.ipynb  02 numerics.ipynb  03 rates.ipynb  04 instruments.ipynb  05 risk.ipynb  06 portfolio.ipynb  07 equity.ipynb  08 analytics.ipynb  09 market risk.ipynb  10 trees.ipynb  11 simulations.ipynb  12 optimization.ipynb  13 bootstrapping.ipynb
src/pykwant/: __init__.py  analytics.py  bootstrapping.py  dates.py  equity.py  instruments.py  market_risk.py  math_utils.py  models.py  numerics.py  optimization.py  portfolio.py  rates.py  risk.py  simulations.py  trees.py
src/pykwant/data/: constants.py  interfaces.py  repository.py  schema.py  storage.py
src/pykwant/data/providers/: csv.py  yahoo.py
tests/: conftest.py  test_analytics.py  test_bootstrapping.py  test_dates.py  test_equity.py  test_instruments.py  test_market_risk.py  test_math_utils.py  test_models.py  test_numerics.py  test_optimization.py  test_portfolio.py  test_rates.py  test_risk.py  test_simulations.py  test_trees.py
tests/data/: test_providers.py  test_repository.py  test_schema.py
