[project]
name = "pykwant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pandera>=0.27.0",
    "pyarrow>=22.0.0",
    "scipy>=1.16.3",
    "yfinance>=0.2.66",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pykwant"]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pandas-stubs>=2.3.3.251201",
    "pre-commit>=4.5.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.9",
    "types-requests>=2.32.4.20250913",
    "types-setuptools>=80.9.0.20250822",
]

[tool.mypy]
# --- STRICT MODE ---
strict = true

python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
show_error_codes = true
pretty = true

plugins = [
    "pandera.mypy",
    "numpy.typing.mypy_plugin"
]

[[tool.mypy.overrides]]
module = "pandas.*"
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = "matplotlib.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "yfinance.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "scipy.*"
ignore_missing_imports = true
