[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pykwant"
version = "0.1.0"
description = "A functional programming library for Quantitative Finance"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "PyKwant Team", email = "dev@pykwant.org" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Office/Business :: Financial :: Investment",
    "Development Status :: 3 - Alpha",
]
# Le dipendenze runtime (quelle che servono agli utenti) vanno qui.
# Essendo "Zero-Dependency", lasciamo vuoto.
dependencies = []

# [tool.uv] è opzionale ma utile per pinnare la versione python del progetto
# o gestire comportamenti specifici del lock file.
[tool.uv]
package = true

# --- Dependency Groups (PEP 735) ---
# uv usa questa sezione per gestire i tool di sviluppo.
# Questo è il nuovo standard supportato da uv.
[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pykwant"]

# --- Testing Configuration ---
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=src/pykwant --cov-report=term-missing"
testpaths = ["tests"]

# --- Static Type Checking (Mypy) ---
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
extra_checks = true

# Rilassiamo i controlli per i test
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true

# --- Linter & Formatter (Ruff) ---
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = []

[tool.coverage.run]
branch = true
source = ["src/pykwant"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
